Profile page completed

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -30,11 +30,11 @@
             <TextView
                 android:id="@+id/suggested_doctor_text"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="75dp"
                 android:background="@color/black"
-                android:layout_marginLeft="10dp"
-                android:gravity="start"
-                android:text="@string/suggested_doctor"
+                android:gravity="center"
+                android:padding="16dp"
+                android:text="Suggested Doctor"
                 android:textColor="@color/white"
                 android:textSize="28sp"
                 android:textStyle="bold" />
@@ -51,6 +51,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="100dp"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                     <!-- First CardView -->
@@ -68,16 +69,16 @@
                             android:layout_height="wrap_content"
                             android:background="@color/black"
                             android:padding="8dp">
+
                             <ImageButton
                                 android:id="@+id/imageview"
                                 android:layout_width="64dp"
                                 android:layout_height="50dp"
+
                                 android:layout_centerHorizontal="true"
-                                android:cropToPadding="false"
-                                android:adjustViewBounds="false"
-                                android:scaleType="fitCenter"
-                                android:background="?attr/selectableItemBackgroundBorderless"
-                                android:src="@drawable/d1" />
+                                android:background="@drawable/circular_button_background"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/d8" />
 
                             <TextView
                                 android:id="@+id/name"
@@ -85,7 +86,7 @@
                                 android:layout_height="35dp"
                                 android:layout_below="@id/imageview"
                                 android:layout_centerHorizontal="true"
-                                android:text="Sayanee Saha"
+                                android:text="Kritika pathak"
                                 android:textColor="@color/white"
                                 android:textSize="15sp"
                                 android:textStyle="bold" />
@@ -113,9 +114,9 @@
                                 android:id="@+id/imageview2"
                                 android:layout_width="64dp"
                                 android:layout_height="50dp"
-                                android:scaleType="fitCenter"
-                                android:background="?attr/selectableItemBackgroundBorderless"
+                                android:background="@drawable/circular_button_background"
                                 android:layout_centerHorizontal="true"
+                                android:scaleType="centerCrop"
                                 android:src="@drawable/d2" />
 
                             <TextView
@@ -151,9 +152,9 @@
                                 android:id="@+id/imageview3"
                                 android:layout_width="64dp"
                                 android:layout_height="50dp"
-                                android:scaleType="fitCenter"
-                                android:background="?attr/selectableItemBackgroundBorderless"
+                                android:background="@color/black"
                                 android:layout_centerHorizontal="true"
+                                android:scaleType="centerCrop"
                                 android:src="@drawable/d3" />
 
                             <TextView
@@ -189,9 +190,9 @@
                                 android:id="@+id/imageview4"
                                 android:layout_width="64dp"
                                 android:layout_height="50dp"
+                                android:background="@color/black"
                                 android:layout_centerHorizontal="true"
-                                android:scaleType="fitCenter"
-                                android:background="?attr/selectableItemBackgroundBorderless"
+                                android:scaleType="centerCrop"
                                 android:src="@drawable/d4" />
 
                             <TextView
@@ -227,9 +228,9 @@
                                 android:id="@+id/imageview5"
                                 android:layout_width="64dp"
                                 android:layout_height="50dp"
+                                android:background="@color/black"
                                 android:layout_centerHorizontal="true"
-                                android:scaleType="fitCenter"
-                                android:background="?attr/selectableItemBackgroundBorderless"
+                                android:scaleType="centerCrop"
                                 android:src="@drawable/d5" />
 
                             <TextView
@@ -266,9 +267,9 @@
                                 android:id="@+id/imageview6"
                                 android:layout_width="64dp"
                                 android:layout_height="50dp"
+                                android:background="@color/black"
                                 android:layout_centerHorizontal="true"
-                                android:scaleType="fitCenter"
-                                android:background="?attr/selectableItemBackgroundBorderless"
+                                android:scaleType="centerCrop"
                                 android:src="@drawable/d6" />
 
                             <TextView
@@ -305,9 +306,9 @@
                                 android:id="@+id/imageview7"
                                 android:layout_width="64dp"
                                 android:layout_height="50dp"
+                                android:background="@color/black"
                                 android:layout_centerHorizontal="true"
-                                android:scaleType="fitCenter"
-                                android:background="?attr/selectableItemBackgroundBorderless"
+                                android:scaleType="centerCrop"
                                 android:src="@drawable/d7" />
 
                             <TextView
@@ -344,10 +345,10 @@
                                 android:id="@+id/imageview8"
                                 android:layout_width="64dp"
                                 android:layout_height="50dp"
+                                android:background="@color/black"
                                 android:layout_centerHorizontal="true"
-                                android:scaleType="fitCenter"
-                                android:background="?attr/selectableItemBackgroundBorderless"
-                                android:src="@drawable/d8" />
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/d1" />
 
                             <TextView
                                 android:id="@+id/name8"
@@ -355,7 +356,7 @@
                                 android:layout_height="35dp"
                                 android:layout_below="@id/imageview8"
                                 android:layout_centerHorizontal="true"
-                                android:text="Kritika Pathak"
+                                android:text="Sayanee Saha "
                                 android:textColor="@color/white"
                                 android:textSize="15sp"
                                 android:textStyle="bold" />
@@ -383,9 +384,9 @@
                                 android:id="@+id/imageview9"
                                 android:layout_width="64dp"
                                 android:layout_height="50dp"
+                                android:background="@color/black"
                                 android:layout_centerHorizontal="true"
-                                android:scaleType="fitCenter"
-                                android:background="?attr/selectableItemBackgroundBorderless"
+                                android:scaleType="centerCrop"
                                 android:src="@drawable/d9" />
 
                             <TextView
@@ -421,9 +422,9 @@
                                 android:id="@+id/imageview10"
                                 android:layout_width="64dp"
                                 android:layout_height="50dp"
+                                android:background="@color/black"
                                 android:layout_centerHorizontal="true"
-                                android:scaleType="fitCenter"
-                                android:background="?attr/selectableItemBackgroundBorderless"
+                                android:scaleType="centerCrop"
                                 android:src="@drawable/d0" />
 
                             <TextView
@@ -466,8 +467,9 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginLeft="25dp"
-                        android:scaleType="fitCenter"
-                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:background="@drawable/circular_button_background"
+                        android:scaleType="centerCrop"
+                        android:padding="0dp"
                         android:src="@drawable/d8" />
 
 
@@ -570,9 +572,10 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginLeft="25dp"
-                        android:scaleType="fitCenter"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:src="@drawable/d7" />
+                        android:background="@drawable/circular_button_background"
+                        android:scaleType="centerCrop"
+                        android:padding="0dp"
+                        android:src="@drawable/d6" />
 
 
                     <!-- Nested LinearLayout for Name and Profession -->
@@ -674,9 +677,10 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginLeft="25dp"
-                        android:scaleType="fitCenter"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:src="@drawable/d6" />
+                        android:background="@drawable/circular_button_background"
+                        android:scaleType="centerCrop"
+                        android:padding="0dp"
+                        android:src="@drawable/d4" />
 
 
                     <!-- Nested LinearLayout for Name and Profession -->
@@ -778,9 +782,10 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginLeft="25dp"
-                        android:scaleType="fitCenter"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:src="@drawable/d4" />
+                        android:background="@drawable/circular_button_background"
+                        android:scaleType="centerCrop"
+                        android:padding="0dp"
+                        android:src="@drawable/d3" />
 
 
                     <!-- Nested LinearLayout for Name and Profession -->
@@ -882,9 +887,10 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginLeft="25dp"
-                        android:scaleType="fitCenter"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:src="@drawable/d2" />
+                        android:background="@drawable/circular_button_background"
+                        android:scaleType="centerCrop"
+                        android:padding="0dp"
+                        android:src="@drawable/d1" />
 
 
                     <!-- Nested LinearLayout for Name and Profession -->
@@ -986,9 +992,10 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginLeft="25dp"
-                        android:scaleType="fitCenter"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:src="@drawable/d6" />
+                        android:background="@drawable/circular_button_background"
+                        android:scaleType="centerCrop"
+                        android:padding="0dp"
+                        android:src="@drawable/d7" />
 
 
                     <!-- Nested LinearLayout for Name and Profession -->
@@ -1090,9 +1097,10 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginLeft="25dp"
-                        android:scaleType="fitCenter"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:src="@drawable/d1" />
+                        android:background="@drawable/circular_button_background"
+                        android:scaleType="centerCrop"
+                        android:padding="0dp"
+                        android:src="@drawable/d5" />
 
 
                     <!-- Nested LinearLayout for Name and Profession -->
@@ -1194,9 +1202,10 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginLeft="25dp"
-                        android:scaleType="fitCenter"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:src="@drawable/d7" />
+                        android:background="@drawable/circular_button_background"
+                        android:scaleType="centerCrop"
+                        android:padding="0dp"
+                        android:src="@drawable/d2" />
 
 
                     <!-- Nested LinearLayout for Name and Profession -->
@@ -1298,9 +1307,10 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginLeft="25dp"
-                        android:scaleType="fitCenter"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:src="@drawable/d4" />
+                        android:background="@drawable/circular_button_background"
+                        android:scaleType="centerCrop"
+                        android:padding="0dp"
+                        android:src="@drawable/d0" />
 
 
                     <!-- Nested LinearLayout for Name and Profession -->
