--- a/app/src/main/res/layout/activity_doctor_profile2.xml
+++ b/app/src/main/res/layout/activity_doctor_profile2.xml
@@ -2,11 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/p"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Doctor_profile">
-
+    tools:context=".Doctor_profile2">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -28,7 +26,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +41,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:layout_marginStart="25dp"
-                        android:text="Kritika Pathak"
+                        android:text="Bharat Kukreti"
                         android:textSize="20dp"
                         android:textStyle="bold"
                         android:textColor="@color/white"
@@ -73,7 +70,7 @@
                             android:layout_marginStart="10dp"
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/d8" />
+                            app:srcCompat="@drawable/d2" />
 
                     </androidx.cardview.widget.CardView>
 
@@ -146,7 +143,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal|top"
-                                android:text="09"
+                                android:text="10"
                                 android:textSize="20dp"
                                 android:textColor="@color/white"
                                 android:textStyle="bold" />
@@ -207,7 +204,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="25dp"
                         android:textColor="@color/white"
-                        android:text="Junior Resident Doctor" />
+                        android:text="Cardiologist" />
 
                 </androidx.cardview.widget.CardView>
 
@@ -238,7 +235,7 @@
                     android:layout_weight="1"
                     android:background="@color/black"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/post1" />
+                    app:srcCompat="@drawable/post6" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -266,7 +263,7 @@
                         app:srcCompat="@drawable/share_button" />
 
                     <ImageButton
-                        android:id="@+id/report1"
+                        android:id="@+id/report5"
                         android:layout_width="5dp"
                         android:layout_height="48dp"
                         android:layout_gravity="center"
@@ -294,7 +291,7 @@
                     android:layout_weight="1"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/post3" />
+                    app:srcCompat="@drawable/post11" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -322,7 +319,7 @@
                         app:srcCompat="@drawable/share_button" />
 
                     <ImageButton
-                        android:id="@+id/report1"
+                        android:id="@+id/report6"
                         android:layout_width="5dp"
                         android:layout_height="48dp"
                         android:layout_gravity="center"
@@ -346,5 +343,7 @@
 
         </LinearLayout>
     </ScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
