--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -60,12 +60,12 @@
 
                 <TextView
                     android:id="@+id/name"
-                    android:layout_width="49dp"
+                    android:layout_width="100dp"
                     android:layout_height="27dp"
                     android:layout_marginLeft="45dp"
                     android:layout_marginTop="112dp"
                     android:gravity="top"
-                    android:text="@string/name_"
+                    android:text="Bharat Kukreti"
                     android:textAppearance="@style/name" />
 
                 <View
@@ -74,15 +74,26 @@
                     android:layout_height="85dp"
                     android:layout_marginLeft="27dp"
                     android:layout_marginTop="27dp"
-                    android:background="@drawable/ellipse_1" />
+                    android:background="@drawable/d2"
+                    android:clickable="true" />
 
                 <View
                     android:id="@+id/rectangle_1"
-                    android:layout_width="270dp"
+                    android:layout_width="230dp"
                     android:layout_height="60dp"
-                    android:layout_marginLeft="60dp"
+                    android:layout_marginLeft="105dp"
                     android:layout_marginTop="43dp"
                     android:background="@drawable/rectangle_9" />
+
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="180dp"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_gravity="center"
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    android:text="Cardiologist" />
 
             </androidx.cardview.widget.CardView>
 
@@ -97,12 +108,12 @@
 
                 <TextView
                     android:id="@+id/name2"
-                    android:layout_width="49dp"
+                    android:layout_width="100dp"
                     android:layout_height="27dp"
                     android:layout_marginLeft="45dp"
                     android:layout_marginTop="112dp"
                     android:gravity="top"
-                    android:text="@string/name_"
+                    android:text="Kritika Pathak"
                     android:textAppearance="@style/name" />
 
                 <View
@@ -111,22 +122,34 @@
                     android:layout_height="85dp"
                     android:layout_marginLeft="27dp"
                     android:layout_marginTop="27dp"
-                    android:background="@drawable/ellipse_1" />
+                    android:background="@drawable/d8" />
 
                 <View
                     android:id="@+id/rectangle_2"
-                    android:layout_width="270dp"
+                    android:layout_width="230dp"
                     android:layout_height="60dp"
-                    android:layout_marginLeft="60dp"
+                    android:layout_marginLeft="105dp"
                     android:layout_marginTop="43dp"
                     android:background="@drawable/rectangle_9" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="180dp"
+                    android:layout_height="45dp"
+                    android:layout_gravity="center"
+                    android:textColor="@color/white"
+                    android:layout_marginLeft="15dp"
+                    android:textSize="17dp"
+                    android:text="Junior Resident Doctor" />
+
 
             </androidx.cardview.widget.CardView>
 
             <View
                 android:id="@+id/rectangle_8"
-                android:layout_width="362dp"
+                android:layout_width="358dp"
                 android:layout_height="322dp"
+                android:layout_marginLeft="15dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="130dp"
@@ -146,26 +169,26 @@
 
             <TextView
                 android:id="@+id/name3"
-                android:layout_width="85dp"
+                android:layout_width="200dp"
                 android:layout_height="30dp"
                 android:layout_alignTop="@id/rectangle_4"
                 android:layout_alignLeft="@id/rectangle_4"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="16dp"
-                android:text="@string/name_"
+                android:text="Shubham Puhal"
                 android:textAppearance="@style/name_3"
                 android:gravity="top"
                 />
 
             <TextView
                 android:id="@+id/Age_text"
-                android:layout_width="85dp"
+                android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:layout_alignTop="@id/name3"
                 android:layout_alignLeft="@id/rectangle_4"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="28dp"
-                android:text="@string/age_text"
+                android:text="Age : 18"
                 android:textAppearance="@style/name_3"
                 android:gravity="top"
                 />
@@ -178,7 +201,7 @@
                 android:layout_alignLeft="@id/rectangle_4"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="28dp"
-                android:text="@string/gender_text"
+                android:text="Male"
                 android:textAppearance="@style/name_3"
                 android:gravity="top"
                 />
@@ -186,12 +209,12 @@
             <TextView
                 android:id="@+id/RecentReport_text"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="60dp"
                 android:layout_alignTop="@id/Gender_text"
                 android:layout_alignLeft="@id/rectangle_4"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="36dp"
-                android:text="@string/past_reports_amp_treatments"
+                android:text="Past Reports And Treatments \nNone "
                 android:textAppearance="@style/name_3"
                 android:gravity="top"
                 />
