--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -50,6 +50,16 @@
                 android:textAppearance="@style/suggested_d" />
 
 
+            <View
+                android:id="@+id/rectangle_8"
+                android:layout_width="358dp"
+                android:layout_height="322dp"
+                android:layout_marginLeft="15dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="130dp"
+                android:background="@drawable/rectangle_8" />
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -62,11 +72,19 @@
                     android:id="@+id/name"
                     android:layout_width="100dp"
                     android:layout_height="27dp"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="112dp"
                     android:gravity="top"
                     android:text="Bharat Kukreti"
                     android:textAppearance="@style/name" />
+
+                <View
+                    android:id="@+id/rectangle_1"
+                    android:layout_width="230dp"
+                    android:layout_height="60dp"
+                    android:layout_marginLeft="105dp"
+                    android:layout_marginTop="43dp"
+                    android:background="@drawable/rectangle_9" />
 
                 <View
                     android:id="@+id/ellipse_1"
@@ -77,23 +95,17 @@
                     android:background="@drawable/d2"
                     android:clickable="true" />
 
-                <View
-                    android:id="@+id/rectangle_1"
-                    android:layout_width="230dp"
-                    android:layout_height="60dp"
-                    android:layout_marginLeft="105dp"
-                    android:layout_marginTop="43dp"
-                    android:background="@drawable/rectangle_9" />
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="180dp"
                     android:layout_height="45dp"
-                    android:layout_marginLeft="15dp"
                     android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:alpha="0.7"
+                    android:text="Cardiologist"
                     android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:text="Cardiologist" />
+                    android:textSize="20dp" />
 
             </androidx.cardview.widget.CardView>
 
@@ -110,19 +122,11 @@
                     android:id="@+id/name2"
                     android:layout_width="100dp"
                     android:layout_height="27dp"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="112dp"
                     android:gravity="top"
                     android:text="Kritika Pathak"
                     android:textAppearance="@style/name" />
-
-                <View
-                    android:id="@+id/ellipse_2"
-                    android:layout_width="85dp"
-                    android:layout_height="85dp"
-                    android:layout_marginLeft="27dp"
-                    android:layout_marginTop="27dp"
-                    android:background="@drawable/d8" />
 
                 <View
                     android:id="@+id/rectangle_2"
@@ -132,28 +136,28 @@
                     android:layout_marginTop="43dp"
                     android:background="@drawable/rectangle_9" />
 
+                <View
+                    android:id="@+id/ellipse_2"
+                    android:layout_width="85dp"
+                    android:layout_height="85dp"
+                    android:layout_marginLeft="27dp"
+                    android:layout_marginTop="27dp"
+                    android:background="@drawable/d8" />
+
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="180dp"
                     android:layout_height="45dp"
                     android:layout_gravity="center"
+                    android:alpha="0.7"
                     android:textColor="@color/white"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="20dp"
                     android:textSize="17dp"
                     android:text="Junior Resident Doctor" />
 
 
             </androidx.cardview.widget.CardView>
 
-            <View
-                android:id="@+id/rectangle_8"
-                android:layout_width="358dp"
-                android:layout_height="322dp"
-                android:layout_marginLeft="15dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="130dp"
-                android:background="@drawable/rectangle_8" />
 
             <TextView
                 android:id="@+id/report"
@@ -234,54 +238,40 @@
             <TextView
                 android:id="@+id/Potentialilness_text"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_alignTop="@id/rectangle_6"
+                android:layout_height="35dp"
                 android:layout_alignLeft="@id/rectangle_6"
+                android:layout_alignTop="@id/rectangle_6"
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="16dp"
+                android:textSize="30dp"
+                android:gravity="top"
                 android:text="@string/potential_illness"
                 android:textAppearance="@style/name_3"
-                android:gravity="top"
-                />
+                android:textColor="#FF1504" />
 
             <TextView
                 android:id="@+id/Potential_Symptoms_text"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:layout_alignTop="@id/Potentialilness_text"
                 android:layout_alignLeft="@id/rectangle_6"
+                android:layout_alignTop="@id/Potentialilness_text"
                 android:layout_marginLeft="12dp"
-                android:layout_marginTop="28dp"
-                android:text="@string/potential_symptoms"
-                android:textAppearance="@style/name_3"
+                android:layout_marginTop="35dp"
                 android:gravity="top"
-                />
+                android:text="@string/potential_symptoms"
+                android:textAppearance="@style/name_3" />
 
             <TextView
                 android:id="@+id/symptom_1"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/rectangle_6"
                 android:layout_alignTop="@id/Potential_Symptoms_text"
-                android:layout_alignLeft="@id/rectangle_6"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="30dp"
+                android:gravity="top"
                 android:text="@string/symptom_1"
-                android:textAppearance="@style/name_3"
-                android:gravity="top"
-                />
-
-            <TextView
-                android:id="@+id/symptom_2"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_alignTop="@id/symptom_1"
-                android:layout_alignLeft="@id/rectangle_6"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="36dp"
-                android:text="@string/symptom_2"
-                android:textAppearance="@style/name_3"
-                android:gravity="top"
-                />
+                android:textAppearance="@style/name_4" />
 
 
             <View
