Integrated with GCP instances.

--- a/app/src/main/res/layout/activity_chat_page.xml
+++ b/app/src/main/res/layout/activity_chat_page.xml
@@ -8,6 +8,29 @@
     tools:context=".Chat_page">
 
     <RelativeLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:elevation="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Helpline"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -17,18 +40,18 @@
             android:id="@+id/chat_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_above="@+id/chat_input_layout"
             android:divider="@null"
-            android:dividerHeight="0dp"
-            android:layout_above="@+id/chat_input_layout"/>
+            android:dividerHeight="0dp" />
 
         <!-- Chat input layout -->
         <RelativeLayout
             android:id="@+id/chat_input_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/black"
+            android:layout_alignParentBottom="true"
             android:background="@color/white"
-            android:layout_alignParentBottom="true">
+            android:backgroundTint="@color/black">
 
             <!-- Chat input text field -->
 
