--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -103,7 +103,7 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="20dp"
                     android:alpha="0.7"
-                    android:text="Cardiologist"
+                    android:text="General Doctor Practitioner"
                     android:textColor="@color/white"
                     android:textSize="20dp" />
 
